src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__approval_modal_exec_multiline_prefix_no_execpolicy.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: contents
---

  Would you like to run the following command?

  $ python - <<'PY'
  print('hello')
  PY

› 1. Yes, proceed (y)
  2. No, and tell LHA what to do differently (esc)

  Press enter to confirm or esc to cancel
