src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__approvals_selection_popup@windows.snap
---
source: src/agent/cli/product/tui_app/src/chatwidget/tests.rs
assertion_line: 2654
expression: popup
---
  Update Model Permissions

› 1. Read Only (current)  LHA can read files in the current workspace.
                          Approval is required to edit files or access the
                          internet.
  2. Default              LHA can read and edit files in the current
                          workspace, and run commands. Approval is required to
                          access the internet or edit other files. (Identical
                          to Agent mode)
  3. Full Access          LHA can edit files outside this workspace and
                          access the internet without asking for approval.
                          Exercise caution when using.

  Press enter to confirm or esc to go back
