src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__chat_small_idle_h2.snap
---
source: src/agent/cli/product/tui_app/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                        "
"                                        "
